// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > renders default state 1`] = `
<textarea
  class="block w-full max-w-[343px] min-h-[160px] rounded-2xl px-4 py-3 text-base border border-[hsl(var(--border))] bg-[hsl(var(--card))] text-[hsl(var(--foreground))] placeholder:text-[hsl(var(--muted-foreground))] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[hsl(var(--ring))] disabled:opacity-50 disabled:cursor-not-allowed resize-y transition-colors"
  id=":r0:"
  name="test"
/>
`;

exports[`Textarea > renders disabled state 1`] = `
<textarea
  class="block w-full max-w-[343px] min-h-[160px] rounded-2xl px-4 py-3 text-base border border-[hsl(var(--border))] bg-[hsl(var(--card))] text-[hsl(var(--foreground))] placeholder:text-[hsl(var(--muted-foreground))] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[hsl(var(--ring))] disabled:opacity-50 disabled:cursor-not-allowed resize-y transition-colors"
  disabled=""
  id=":r2:"
  name="test"
/>
`;

exports[`Textarea > renders focus state 1`] = `
<textarea
  class="block w-full max-w-[343px] min-h-[160px] rounded-2xl px-4 py-3 text-base border border-[hsl(var(--border))] bg-[hsl(var(--card))] text-[hsl(var(--foreground))] placeholder:text-[hsl(var(--muted-foreground))] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[hsl(var(--ring))] disabled:opacity-50 disabled:cursor-not-allowed resize-y transition-colors"
  id=":r1:"
  name="test"
/>
`;

exports[`Textarea > renders pill tone 1`] = `
<textarea
  class="block w-full max-w-[343px] min-h-[160px] rounded-2xl px-4 py-3 text-base border border-[hsl(var(--border))] bg-[hsl(var(--card))] text-[hsl(var(--foreground))] placeholder:text-[hsl(var(--muted-foreground))] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[hsl(var(--ring))] disabled:opacity-50 disabled:cursor-not-allowed resize-y transition-colors rounded-full min-h-[120px]"
  id=":r3:"
  name="test"
/>
`;
